Agent - fanuc iSeries/Fwlib/15i/Fwlib32.bas


' write setting data
Declare Function cnc_wrset% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Idb As Any )

' read setting data(area specified)
Declare Function cnc_rdsetr% Lib "fwlib32.dll" ( ByVal FlibHndl%, a%, ByVal b%, c%, d%, Odb As Any )

' write setting data(area specified)
Declare Function cnc_wrsets% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Idb As Any )

' read informations of CNC setting data
Declare Function cnc_rdsetinfo% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b&, Odb As ODBSETIF )

' read maximum, minimum and total number of CNC setting data
Declare Function cnc_rdsetnum% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBSETNUM )

' read pitch error compensation data(area specified)
Declare Function cnc_rdpitchr% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As IODBPI )

' write pitch error compensation data(area specified)
Declare Function cnc_wrpitchr% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Idb As IODBPI )

' read pitch error compensation data information
Declare Function cnc_rdpitchinfo% Lib "fwlib32.dll" ( ByVal FlibHndl%, a% )

' read custom macro variable
Declare Function cnc_rdmacro% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBM )

' write custom macro variable
Declare Function cnc_wrmacro% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c&, ByVal d% )

' read custom macro variable (3)
Declare Function cnc_rdmacro3% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a&, ByVal b%, Odb As ODBM3 )

' write custom macro variable (3)
Declare Function cnc_wrmacro3% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a&, ByVal b%, ByVal c&, ByVal d% )

' read custom macro variables(area specified)
Declare Function cnc_rdmacror% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As IODBMR )

' write custom macro variables(area specified)
Declare Function cnc_wrmacror% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Idb As IODBMR )

' read custom macro variable information
Declare Function cnc_rdmacroinfo% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBMVINF )

' get custom macro type
Declare Function cnc_getmactype% Lib "fwlib32.dll" ( ByVal FlibHndl%, a% )

' set custom macro type
Declare Function cnc_setmactype% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a% )

' read P code macro variable
Declare Function cnc_rdpmacro% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a&, Odb As ODBPM )

' write P code macro variable
Declare Function cnc_wrpmacro% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a&, ByVal b&, ByVal c% )

' read P code macro variables(area specified)
Declare Function cnc_rdpmacror% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a&, ByVal b&, ByVal c&, Odb As IODBPR )

' write P code macro variables(area specified)
Declare Function cnc_wrpmacror% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a&, Idb As IODBPR )

' read P code macro variable information
Declare Function cnc_rdpmacroinfo% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBPMINF )

' get P code macro type
Declare Function cnc_getpmactype% Lib "fwlib32.dll" ( ByVal FlibHndl%, a% )

' set P code macro type
Declare Function cnc_setpmactype% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a% )

' read M-code group data
Declare Function cnc_rdmgrpdata% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, b%, Odb As ODBMGRP )

' write M-code group data
Declare Function cnc_wrmgrpdata% Lib "fwlib32.dll" ( ByVal FlibHndl%, Idb As IDBMGRP )

' read executing M-code group data
Declare Function cnc_rdexecmcode% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, b%, Odb As ODBEXEM )

' read program re-start M-code group data
Declare Function cnc_rdrstrmcode% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, b%, Odb As ODBRSTRM )

' read interrupt check
Declare Function cnc_rdintchk% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, ByVal d%, Odb As IODBINT )

' write interrupt check
Declare Function cnc_wrintchk% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Idb As IODBINT )

' read interrupt check information
Declare Function cnc_rdintinfo% Lib "fwlib32.dll" ( ByVal FlibHndl%, a% )

' read hpcc setting data
Declare Function cnc_rdhpccset% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As IODBHPST )

' write hpcc setting data
Declare Function cnc_wrhpccset% Lib "fwlib32.dll" ( ByVal FlibHndl%, Idb As IODBHPST )

' hpcc data auto setting data
Declare Function cnc_hpccatset% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' read hpcc tuning data ( parameter input )
Declare Function cnc_rdhpcctupr% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As IODBHPPR )

' write hpcc tuning data ( parameter input )
Declare Function cnc_wrhpcctupr% Lib "fwlib32.dll" ( ByVal FlibHndl%, Idb As IODBHPPR )

' read hpcc tuning data ( acc input )
Declare Function cnc_rdhpcctuac% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As IODBHPAC )

' write hpcc tuning data ( acc input )
Declare Function cnc_wrhpcctuac% Lib "fwlib32.dll" ( ByVal FlibHndl%, Idb As IODBHPAC )

' hpcc data auto tuning
Declare Function cnc_hpccattune% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, b% )

' read hpcc fine level
Declare Function cnc_hpccactfine% Lib "fwlib32.dll" ( ByVal FlibHndl%, a% )

' select hpcc fine level
Declare Function cnc_hpccselfine% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a% )

' read active fixture offset
Declare Function cnc_rdactfixofs% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Odb As IODBZOFS )

' read fixture offset
Declare Function cnc_rdfixofs% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, ByVal d%, Odb As IODBZOR )

' write fixture offset
Declare Function cnc_wrfixofs% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Idb As IODBZOR )

' read work coordinate shift
Declare Function cnc_rdwkcdshft% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As IODBWCSF)

' write work coordinate shift
Declare Function cnc_wrwkcdshft% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As IODBWCSF)

' read work coordinate shift measure
Declare Function cnc_rdwkcdsfms% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As IODBWCSF)

' write work coordinate shift measure
Declare Function cnc_wrwkcdsfms% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As IODBWCSF)

' read b-axis tool offset value(area specified)
Declare Function cnc_rdbtofsr% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, ByVal d%, Odb As IODBBTO)

' write b-axis tool offset value(area specified)
Declare Function cnc_wrbtofsr% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As IODBBTO)

' read b-axis tool offset information
Declare Function cnc_rdbtofsinfo% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBBTLINF)

' read b-axis command
Declare Function cnc_rdbaxis% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBBAXIS)


'----------------------------------------
' CNC: Tool life management data related
'----------------------------------------

' read tool life management data(tool group number)
Declare Function cnc_rdgrpid% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Odb As ODBTLIFE1 )

' read tool life management data(number of tool groups)
Declare Function cnc_rdngrp% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBTLIFE2 )

' read tool life management data(number of tools)
Declare Function cnc_rdntool% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Odb As ODBTLIFE3 )

' read tool life management data(tool life)
Declare Function cnc_rdlife% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Odb As ODBTLIFE3 )

' read tool life management data(tool lift counter)
Declare Function cnc_rdcount% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Odb As ODBTLIFE3 )

' read tool life management data(tool length number-1)
Declare Function cnc_rd1length% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBTLIFE4 )

' read tool life management data(tool length number-2)
Declare Function cnc_rd2length% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBTLIFE4 )

' read tool life management data(cutter compensation no.-1)
Declare Function cnc_rd1radius% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBTLIFE4 )

' read tool life management data(cutter compensation no.-2)
Declare Function cnc_rd2radius% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBTLIFE4 )

' read tool life management data(tool information-1)
Declare Function cnc_t1info% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBTLIFE4 )

' read tool life management data(tool information-2)
Declare Function cnc_t2info% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBTLIFE4 )

' read tool life management data(tool number)
Declare Function cnc_toolnum% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBTLIFE4 )

' read tool life management data(tool number, tool life, tool life counter)(area specified)
Declare Function cnc_rdtoolrng% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As IODBTR )

' read tool life management data(all data within group)
Declare Function cnc_rdtoolgrp% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBTG )

' write tool life management data(tool life counter) (area specified)
Declare Function cnc_wrcountr% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Idb As IDBWRC )

' read tool life management data(used tool group number)
Declare Function cnc_rdusegrpid% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBUSEGR )

' read tool life management data(max. number of tool groups)
Declare Function cnc_rdmaxgrp% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBLFNO )

' read tool life management data(maximum number of tool within group)
Declare Function cnc_rdmaxtool% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBLFNO )

' read tool life management data(used tool no. within group)
Declare Function cnc_rdusetlno% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As ODBTLUSE )

' read tool life management data(tool data1)
Declare Function cnc_rd1tlifedata% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As IODBTD )

' read tool life management data(tool data2)
Declare Function cnc_rd2tlifedata% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As IODBTD )

' write tool life management data(tool data1)
Declare Function cnc_wr1tlifedata% Lib "fwlib32.dll" ( ByVal FlibHndl%, Idb As IODBTD )

' write tool life management data(tool data2)
Declare Function cnc_wr2tlifedata% Lib "fwlib32.dll" ( ByVal FlibHndl%, Idb As IODBTD )

' read tool life management data(tool group information)
Declare Function cnc_rdgrpinfo% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As IODBTGI )

' read tool life management data(tool group information 2)
Declare Function cnc_rdgrpinfo2% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As IODBTGI2)

' read tool life management data(tool group information 3)
Declare Function cnc_rdgrpinfo3% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As IODBTGI3)

' write tool life management data(tool group information)
Declare Function cnc_wrgrpinfo% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Idb As IODBTGI )

' write tool life management data(tool group information 2)
Declare Function cnc_wrgrpinfo2% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As IODBTGI2)

' write tool life management data(tool group information 3)
Declare Function cnc_wrgrpinfo3% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As IODBTGI3)

' delete tool life management data(tool group)
Declare Function cnc_deltlifegrp% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a% )

' insert tool life management data(tool data)
Declare Function cnc_instlifedt% Lib "fwlib32.dll" ( ByVal FlibHndl%, Idb As IDBITD )
' delete tool life management data(tool data)
Declare Function cnc_deltlifedt% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b% )
